Fixed bug #42177 (Warning "array_merge_recursive(): recursion detected" comes again...)